# PQCrypto-SIKE

./: run_hls.tcl
SIKEp503_HLS/: README.md  run_hls.tcl  vitis_hls.tcl
SIKEp503_HLS/sikep503_hls/: hls.app
SIKEp503_HLS/sikep503_hls/solution1/: solution1.directive  solution1_data.json
SIKEp503_HLS/sikep503_hls/solution1/.autopilot/: .autopilot_exit
SIKEp503_HLS/sikep503_hls/solution1/.autopilot/db/: .message_cosim.xml  .message_csim.xml  .message_syn.xml  EphemeralKeyGeneration_A_1.adb  EphemeralKeyGeneration_A_1.bind.adb  EphemeralKeyGeneration_A_1.bind.adb.xml  EphemeralKeyGeneration_A_1.compgen.tcl  EphemeralKeyGeneration_A_1.sched.adb  EphemeralKeyGeneration_A_1.sched.adb.xml  EphemeralKeyGeneration_A_1.tbgen.tcl  EphemeralKeyGeneration_A_1.verbose.bind.rpt  (+8850 more)
SIKEp503_HLS/sikep503_hls/solution1/.autopilot/db/driver/src/: CMakeLists.txt  xsikep503_kem_enc_hw.h  xsikep503_kem_enc_hw_linux.c
SIKEp503_HLS/src/: P503.c  P503_constants.c  P503_internal.h  config.h  ec_isogeny.c  ec_isogeny.h  fpx.h  sidh.c  sidh.h  sike.c  sike.h  sikep503_kem_enc_tb.cpp  tb_top.cpp  top.cpp
SIKEp503_HLS/src/random/: random.c  random.h
SIKEp503_vitis/: P503.c  P503_internal.h  api.h  config.h  ec_isogeny.c  fpx.c  sidh.c  sike.c  top.c
SIKEp503_vitis/generic/: fp_generic.c
SIKEp503_vitis/random/: random.c  random.h
SIKEp503_vitis/sha3/: fips202.c  fips202.h
SIKEp503_vitis/tests/: PQCtestKAT_kem.c  test_SIKEp503.c  test_extras.c  test_extras.h  test_sike.c
SIKEp503_vitis/tests/aes/: aes.c  aes.h  aes_c.c  aes_local.h
SIKEp503_vitis/tests/rng/: rng.c  rng.h
(+3168 files in other folders)
